# arazzo-engine-cookbook

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
recipes/generator/level-1-basic/: README.md
recipes/runner/level-1-basic/multi-step-flow/: .env.example  Makefile  README.md  pyproject.toml
recipes/runner/level-1-basic/multi-step-flow/arazzo/: workflow.arazzo.yaml
recipes/runner/level-1-basic/multi-step-flow/examples/: basic_example.py  cli_example.sh
recipes/runner/level-1-basic/multi-step-flow/openapi/: jsonplaceholder.openapi.yaml
recipes/runner/level-1-basic/multi-step-flow/tests/: test_workflow.py
recipes/runner/level-1-basic/simple-workflow/: .env.example  Makefile  README.md  pyproject.toml
recipes/runner/level-1-basic/simple-workflow/arazzo/: workflow.arazzo.yaml
recipes/runner/level-1-basic/simple-workflow/examples/: basic_example.py  cli_example.sh
recipes/runner/level-1-basic/simple-workflow/openapi/: jsonplaceholder.openapi.yaml
recipes/runner/level-1-basic/simple-workflow/tests/: test_workflow.py
